add api endpoint for add new powerbank, add enums for common statuses
