# src/main/java/com/powerFind/model/data/LocationAggregate.java
@@ -1,0 +1,12 @@
+package com.powerFind.model.data;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+
+@Data
+@AllArgsConstructor
+public class LocationAggregate
+{
+    private Location location;
+    private LocationGroup locationGroup;
+}
