# src/main/java/com/powerFind/model/domain/LocationGroup.java
@@ -1,0 +1,12 @@
+package com.powerFind.model.domain;
+
+import lombok.Builder;
+import lombok.Data;
+
+@Data
+@Builder
+public class LocationGroup
+{
+    private String city;
+    private String district;
+}
